Refactor TaskStorage and improve AddTask tests
TaskStorage now accepts a custom storage path, improving testability and flexibility. Tests for adding tasks have been updated to use temporary files and cover multiple scenarios, including adding multiple tasks and adding tasks to specific lists. JUnit dependency updated to 5.14.0.